--- a/app/src/main/res/layout/activity_registry_list.xml
+++ b/app/src/main/res/layout/activity_registry_list.xml
@@ -11,7 +11,7 @@
     <FrameLayout android:layout_width="match_parent"
                  android:layout_height="match_parent">
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/add"
+            android:id="@+id/add_fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end|bottom"
