--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,4 +13,15 @@
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
+
+    <style name="ToolbarEditText" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorControlActivated">#cacaca</item>
+        <item name="colorControlHighlight">#cacaca</item>
+        <item name="android:textColorHint">#b1ffffff</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="FormEditText" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="android:layout_marginBottom">16dp</item>
+    </style>
 </resources>
