--- a/app/src/main/res/layout/activity_registry_list.xml
+++ b/app/src/main/res/layout/activity_registry_list.xml
@@ -20,9 +20,8 @@
             app:elevation="4dp"
         />
 
-        <fragment
+        <FrameLayout
             android:id="@+id/registry_list_fragment"
-            android:name="ru.lukaville.dockerui.ui.android.registry.RegistryListFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
         />
