--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#15A4D7</color>
+    <color name="colorPrimaryDark">#0f6a9b</color>
+    <color name="colorAccent">#15A4D7</color>
     <color name="white">#FFFFFF</color>
 
     <color name="colorPrimaryText">#313131</color>
     <color name="colorSecondaryText">#727272</color>
+
+    <color name="transparent">#00000000</color>
+    <color name="compatibility_pressed_color">#1a000000</color>
+    <color name="compatibility_focus_color">#48000000</color>
 </resources>
