Loading state in image list

--- a/app/src/main/res/layout/activity_image_list.xml
+++ b/app/src/main/res/layout/activity_image_list.xml
@@ -10,7 +10,7 @@
     <FrameLayout android:layout_width="match_parent"
                  android:layout_height="match_parent">
         <FrameLayout
-            android:id="@+id/repository_list_fragment"
+            android:id="@+id/image_list_fragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
         />
