Image list error state, logs

--- a/app/src/main/res/layout/fragment_registry_list.xml
+++ b/app/src/main/res/layout/fragment_registry_list.xml
@@ -16,7 +16,7 @@
 
     <include
         android:id="@+id/empty"
-        layout="@layout/state_empty"/>
+        layout="@layout/state_empty_registries"/>
 
     <include
         android:id="@+id/error"
